fix horizontal scrollbar size

--- a/web/src/common/styles/authentik.css
+++ b/web/src/common/styles/authentik.css
@@ -13,6 +13,7 @@
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
     background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
